<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Like button</string>
    <string name="description_share">Share button</string>
    <string name="description_views">Views</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Write a post…</string>
    <string name="description_post_save">Save</string>
    <string name="editing">Editing</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share the post</string>
    <string name="add_post_description">Add post</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="play_button">Play button</string>
    <string name="no_posts">There are no posts yet :(</string>
    <string name="cancel_edit_post_title">Confirmation</string>
    <string name="cancel_edit_post_message">Are you sure? All changes will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="feed_title">Feed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post">Post</string>
</resources>
